syntax = "proto3";
option go_package = "github.com/go-ignite/ignite-agent/protos";

service AgentService {
	rpc NodeHeartbeat(GeneralRequest) returns (stream HeartbeatStreamServer);
	rpc Sync(SyncRequest) returns (stream SyncStreamServer);

	rpc Init(GeneralRequest) returns (GeneralResponse);
	rpc CreateService(CreateServiceRequest) returns (CreateServiceResponse);
	rpc StopService(StopServiceRequest) returns (GeneralResponse);
	rpc RemoveService(RemoveServiceRequest) returns (GeneralResponse);
}

message ServiceType {
    enum Enum {
		NOT_SET = 0;
		SS_LIBEV = 1;
		SSR = 2;
    }
}

message ServiceEncryptionMethod {
	enum Enum {
		NOT_SET = 0;
		AES_256_CFB = 1;
		AES_128_GCM = 2;
		AES_192_GCM = 3;
		AES_256_GCM = 4;
		CHACHA20_IETF_POLY1305 = 5;
		AES_256_CTR = 6;
		CHACHA20 = 7;
		CHACHA20_IETF = 8;
	}
}

message ServiceStatus {
	enum Enum {
		NOT_SET = 0;
		RUNNING = 1;
		STOPPED = 2;
	}
}


message GeneralRequest {
	string token = 1;
}

message GeneralResponse {}

message HeartbeatStreamServer{}

message ServiceInfo {
	string service_id = 1;
	string user_id = 2;
	string container_id = 3;
	int32 port = 4;
	ServiceStatus.Enum status = 5;
	int64 stats_result = 6;
}

message SyncStreamServer{
	repeated ServiceInfo services = 1;
}

message SyncRequest {
	int64 sync_interval = 1;
}

message CreateServiceRequest {
	string token = 1;
	int32 port_from = 2;
	int32 port_to = 3;
	ServiceType.Enum type = 4;
	ServiceEncryptionMethod.Enum encryption_method = 5;
	string password = 6;
	string name = 7;
}

message CreateServiceResponse {
	string service_id = 1;
	string container_id = 2;
	int32 port = 3;
}

message StopServiceRequest {
	string token = 1;
	string service_id = 2;
}

message RemoveServiceRequest {
	string token = 1;
	string service_id = 2;
}
